.deploy/cluster-install/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorleap-doc
spec:
  selector:
    matchLabels:
      app: tensorleap-doc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tensorleap-doc
    spec:
      containers:
        - image: gcr.io/tensorleap-dev-3/doc:latest
          imagePullPolicy: Always
          name: tensorleap-doc
          ports:
            - name: http
              containerPort: 3000
