.deploy/cluster-install/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tensorleap-doc
  name: tensorleap-doc
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: http
  selector:
    app: tensorleap-doc
  sessionAffinity: None
  type: NodePort
