.deploy/cluster-install/patches/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tensorleap-doc
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    external-dns.alpha.kubernetes.io/hostname: docs.dev.tensorleap.ai
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: docs.dev.tensorleap.ai
      http:
        paths:
          - backend:
              serviceName: tensorleap-doc
              servicePort: https
            path: /
  tls:
    - hosts:
        - docs.dev.tensorleap.ai
      secretName: tensorleap-doc-tls
